[gd_scene load_steps=16 format=2]

[ext_resource path="res://objects/enemies/MiniFire.gd" type="Script" id=1]
[ext_resource path="res://objects/enemies/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/art/tile495.png" type="Texture" id=3]
[ext_resource path="res://objects/common/HealthSystem.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/shaders/outline.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/outline_width = 0.2
shader_param/outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 292.11

[sub_resource type="Animation" id=5]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 2.4, 2.4 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeathParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.8, 1.8 ) ]
}

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.864865 )
colors = PoolColorArray( 1, 0.301961, 0.0588235, 1, 1, 0.698039, 0.0313726, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0.979545 ), 0.0, -0.0770848, 0, 1, Vector2( 0.707602, 0.925 ), -0.578436, -0.578436, 0, 0, Vector2( 1, 0 ), -3.1635, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 8, 16, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )

[node name="MiniFire" type="KinematicBody2D"]
script = ExtResource( 1 )
chase_speed = 200.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.301961, 0.0588235, 1 )
material = SubResource( 4 )
position = Vector2( 0, -16 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 2 )

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthSystem" parent="." instance=ExtResource( 4 )]
max_health = 1
current_health = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/death = SubResource( 5 )
anims/idle = SubResource( 6 )

[node name="DeathParticles" type="Particles2D" parent="."]
position = Vector2( 0, -12 )
amount = 20
explosiveness = 0.77
local_coords = false
process_material = SubResource( 11 )
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="health_zero" from="HealthSystem" to="." method="_on_HealthSystem_health_zero"]

[editable path="PlayerDetectionZone"]
